--- a/arch/arm/configs/falcon_defconfig
+++ b/arch/arm/configs/falcon_defconfig
@@ -1,7 +1,7 @@
 #
 # Explosion Feactures
 #
-CONFIG_LOCALVERSION="-ExplosionNougat"
+CONFIG_LOCALVERSION="-Blackhawk-3.0"
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_POWERSUSPEND=y
