--- a/arch/arm/configs/titan_defconfig
+++ b/arch/arm/configs/titan_defconfig
@@ -1,3 +1,25 @@
+#
+# Explosion Feactures
+#
+CONFIG_LOCALVERSION="-Blackhawk-3.0"
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_POWERSUSPEND=y
+CONFIG_ASMP=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_VR=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+#
+# End Explosion Feactures
+#
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_BOOTINFO=y
 CONFIG_EXPERIMENTAL=y
