--- a/arch/arm/configs/peregrine_defconfig
+++ b/arch/arm/configs/peregrine_defconfig
@@ -1,7 +1,7 @@
 #
-# Explosion Feactures
+# Explosion Feactures (Thanks @CarlosArriaga)
 #
-CONFIG_LOCALVERSION="-Blackhawk-3.0"
+CONFIG_LOCALVERSION="-DiamondSlash-peregrine"
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_POWERSUSPEND=y
